--- a/adventure_net/equipment_accounting/templates/equipment_accounting/category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/category.html
@@ -1,14 +1,14 @@
-<a href="{% url 'equipment:add_category' %}" role="button">Add equipment</a>
+<a href="{% url 'equipment:add_category' %}" role="button">Add category</a>
 
 
 <ul class="list" >
-    {% for equipment in equipments%}
+    {% for category in categories%}
     <li class="items" >
-      <h1>{{equipment.equipment_category_name}}</h1>
+      <h1>{{category.equipment_category_name}}</h1>
       <div>
 
-      <a href="{% url 'equipment:change_category' equipment.id %}" role="button"><button class="button_g" type="button"> Change</button></a>
-      <a href="{% url 'equipment:delete_category' equipment.id %}" role="button" class="contrast"><button class="button_r" type="button"> Delete</button></a>
+      <a href="{% url 'equipment:change_category' category.id %}" role="button"><button class="button_g" type="button"> Change</button></a>
+      <a href="{% url 'equipment:delete_category' category.id %}" role="button" class="contrast"><button class="button_r" type="button"> Delete</button></a>
     </div>
     </li>
     {% endfor %}
