--- a/adventure_net/equipment_accounting/templates/equipment_accounting/change_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/change_equipment.html
@@ -1,13 +1,48 @@
 <form method="POST">
     {% csrf_token %}
     <div class="pole" >
-        <label class="pole__label">Change equipment category name: </label>
-        <input class="pole__input" type="text" name="equipment_category_name" value={{category.equipment_category_name}}>
-        <span>{{form.errors.equipment_category_name}}</span>
+        <label class="pole__label">Enter equipment name: </label>
+        <input class="pole__input" type="text" name="equipment_name" value={{equipment.equipment_name}}>
+        <span>{{form.errors.equipment_name}}</span>
     </div>
+    <div class="pole" >
+        <label class="pole__label">weight of equipment kg: </label>
+        <input class="pole__input" type="text" name="weight_of_equipment_kg" value={{equipment.weight_of_equipment_kg}}>
+        <span>{{form.errors.weight_of_equipment_kg}}</span>
+
+    </div>
+    <div class="pole" >
+        <label class="pole__label">Enter equipment photo path: </label>
+        <input class="pole__input" type="text" name="photo_of_equipment" value={{equipment.photo_of_equipment}}>
+        <span>{{form.errors.photo_of_equipment}}</span>
+    </div>
+
+    <div class="form-group">
+        <label class="pole__label">Enter equipment photo path: </label>
+        <select
+            placeholder="now_booked"
+            name="now_booked">
+            <option value="False">False</option>
+            <option value="True">True</option>
+        </select>
+        <span>{{form.errors.now_booked}}</span>
+    </div>
+
+
+    <!-- <div>
+        <label> Choose equipmant category:
+            <select name="categories" required>
+                {% for category in categories %}
+                <option value="{{category.equipment_category_name}}">{{category.equipment_category_name}}</option>
+                {% endfor %}
+            </select>
+        </label>
+    </div> -->
+
+
     
     <div class="grid">
         <button class="change__button_g" type="submit">Submit</button>
-        <button class="change__button_r" type="reset" ><a href="{% url 'equipment:get_category' %}" role="button" > Reset </a></button>
+        <button class="change__button_r" type="reset" ><a href="{% url 'equipment:get_equipments' %}" role="button" > Reset </a></button>
     </div>
 </form>
