--- a/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
@@ -3,6 +3,6 @@
 <h1>Do you want to delete this equipment?</h1>
 <div class="buttons" >
 <button class="change__button_g" type="submit">Submit</button>
-<button type="reset" class="change__button_r"><a href="{% url 'equipment:get_category' %}" role="button" > No </a></button>
+<button type="reset" class="change__button_r"><a href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
 </div>
 </form>
