--- a/adventure_net/equipment_accounting/templates/equipment_accounting/delete_category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/delete_category.html
@@ -1,3 +1,10 @@
+{% extends "layouts/base.html" %}
+{% block title %} delete category {% endblock %}
+
+<!-- Специфічний CSS буде тут -->
+{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+
+
 <form method="post">
     {% csrf_token %}
 <h1>Do you want to delete this equipment?</h1>
@@ -6,3 +13,9 @@
 <button type="reset" class="change__button_r"><a href="{% url 'equipment:get_category' %}" role="button" > No </a></button>
 </div>
 </form>
+
+
+{% endblock content %}
+
+<!-- Специфічний JS буде тут  -->
+{% block javascripts %}{% endblock javascripts %}
