--- a/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
@@ -1,7 +1,19 @@
-<div class="wrapper" >
+{% extends "layouts/base.html" %}
+{% block title %} delete equipment {% endblock %}
+
+<!-- Специфічний CSS буде тут -->
+{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+
+<div class="modal" >
     <h1>{{equipment.equipment_name}}</h1>
     <p>weight of equipment kg: <b>{{equipment.weight_of_equipment_kg}}</b></p>
     <p>photo of equipment: <b>{{equipment.photo_of_equipment}}</b></p>
     <p>now booked: <b>{{equipment.now_booked}}</b></p>
     <p>equipment_category: <b>{{equipment.equipment_category}}</b></p>
     </div>
+
+    
+{% endblock content %}
+
+<!-- Специфічний JS буде тут  -->
+{% block javascripts %}{% endblock javascripts %}
