--- a/adventure_net/equipment_accounting/static/assets/css/style.css
+++ b/adventure_net/equipment_accounting/static/assets/css/style.css
@@ -1,15 +1,73 @@
 .button_g {
-    background-color: green;
+    /* background-color: green; */
 }
 .button_r {
-    background-color: red;
+    /* background-color: red; */
 }
-change__button_r {
-    background-color: red;
+.change__button_r {
+    /* background-color: red; */
+}
+.change__button_g {
+    /* background-color: green; */
 }
 .pole__input {
-    background-color: brown;
+    margin-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* display: block; */
 }
 h1 {
-    color: blue;
+    /* color: blue; */
 }
+.list {
+    list-style: none;
+}
+
+.btn {
+    margin-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 10px;
+    border-radius: 3px;
+    /* background-color: rgb(0,0,0,0); */
+    border: none;
+    /* float: right; */
+    color: black;
+    font-weight: bold;
+  }
+  
+  .btn:hover {
+    background-color: RoyalBlue;
+  }
+  body {
+    background-color: #e7ecf2;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* background-color: black; */
+  }
+
+  .link {
+    
+    text-decoration: none;
+    color: black;
+  }
+  .link-btn {
+    padding: 10px;
+  }
+
+  .modal {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
+    margin: 0 auto;
+    overflow: hidden;
+    width: 400px;
+  }
+
+  .cange-category__buttons-block {
+    /* padding-top: 20px; */
+    text-align: center;
+  }
+  .pole {
+    text-align: center;
+  }
