--- a/adventure_net/equipment_accounting/templates/equipment_accounting/add_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/add_equipment.html
@@ -6,6 +6,7 @@
 
 <form method="POST" action="{% url 'equipment:add_equipment' %}">
     {% csrf_token %}
+    <div class="modal">
     <div class="pole" >
         <label class="pole__label">Enter equipment name: </label>
         <input class="pole__input" type="text" name="equipment_name">
@@ -43,11 +44,11 @@
     </div>
 
     <div class="grid">
-        <button class="change__button_g" type="submit">Submit</button>
-        <button type="reset" class="secondary">Скинути</button>
+        <button class="btn change__button_g" type="submit">Submit</button>
+        <button class="btn" type="reset"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > Cancel </a></button>
     </div>
-
     
+</div>
 </form>
 
 {% endblock content %}
