--- a/adventure_net/equipment_accounting/templates/equipment_accounting/checker.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/checker.html
@@ -6,8 +6,8 @@
 
   <h1>{{ msg }}</h1>
   <ul>
-    <li><a href="../category">Category</a></li>
-    <li><a href="../">equipment</a></li>
+    <li><a class="link" href="../category">Category</a></li>
+    <li><a class="link" href="../">equipment</a></li>
   </ul>
 
   {% endblock content %}
