--- a/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
@@ -7,10 +7,12 @@
 
 <form method="post">
     {% csrf_token %}
-<h1>Do you want to delete this equipment?</h1>
+    <div class="modal">
+<label class="pole__label">Do you want to delete this equipment?</label>
 <div class="buttons" >
-<button class="change__button_g" type="submit">Submit</button>
-<button type="reset" class="change__button_r"><a href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
+<button class="btn change__button_g" type="submit">Submit</button>
+<button type="reset" class="btn change__button_r"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
+</div>
 </div>
 </form>
 
