--- a/adventure_net/equipment_accounting/templates/equipment_accounting/equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/equipment.html
@@ -5,26 +5,26 @@
 {% block stylesheets %}{% endblock stylesheets %} 
 
 {% block content %}
-
-<a href="{% url 'equipment:add_equipment' %}" role="button">Add equipment</a>
-<a href="{% url 'equipment:add_category' %}" role="button">Add category</a>
+<div class="modal">
+<a class="link" href="{% url 'equipment:add_equipment' %}" role="button">Add equipment</a>
+<a class="link" href="{% url 'equipment:add_category' %}" role="button">Add category</a>
 
 
 <ul class="list" >
     {% for equipment in equipments%}
     <li class="items" >
 
-      <h1><a href="{% url 'equipment:detail_equipment' equipment.id %}" role="button" class="outline">{{equipment.equipment_name}}</a></h1>
+      <h1><a class="link" href="{% url 'equipment:detail_equipment' equipment.id %}" role="button" class="outline">{{equipment.equipment_name}}</a></h1>
       
       <div>
 
-      <a href="{% url 'equipment:change_equipment' equipment.id %}" role="button"><button class="button_g" type="button"> Change</button></a>
-      <a href="{% url 'equipment:delete_equipment' equipment.id %}" role="button" class="contrast"><button class="button_r" type="button"> Delete</button></a>
+      <a class="link" href="{% url 'equipment:change_equipment' equipment.id %}" role="button"><button class="btn button_g" type="button"> Change</button></a>
+      <a class="link" href="{% url 'equipment:delete_equipment' equipment.id %}" role="button" class="contrast"><button class="btn button_r" type="button"> Delete</button></a>
     </div>
     </li>
     {% endfor %}
   </ul>
-
+</div>
  {% endblock content %}
 
 <!-- Специфічна сторінка JS буде тут  -->
