--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Web Assistant - {% block title %}{% endblock %}</title>
-   
+
     <!-- Meta -->
     <meta charset="utf-8" />
     <meta
@@ -10,22 +10,10 @@
       content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="description"
-      content="....."
-    />
-    <meta
-      name="keywords"
-      content="......."
-    />
+    <meta name="description" content="....." />
+    <meta name="keywords" content="......." />
     <meta name="author" content="..." />
 
-    <!-- Favicon icon -->
-    <!-- <link
-      rel="icon"
-      href="{{ ASSETS_ROOT }}/images/favicon.ico"
-      type="image/x-icon"
-    /> -->
     <!-- fontawesome icon -->
     <!-- <link
       rel="stylesheet"
@@ -36,13 +24,20 @@
       rel="stylesheet"
       href="{{ ASSETS_ROOT }}/plugins/animation/css/animate.min.css"
     /> -->
-    <!-- vendor css -->
+
     {% load static %}
-    
+
+    <!-- vendor css -->
     <link rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
     <!-- dark mode css -->
     <!-- <link rel="stylesheet" href="{{ ASSETS_ROOT }}/css/dark.css" /> -->
 
+    <!-- Favicon icon -->
+    <link
+      rel="icon"
+      href="{% static '/assets/images/favicon.ico' %}"
+      type="image/x-icon"
+    />
     <!-- Специфічний CSS буде тут -->
     {% block stylesheets %}{% endblock stylesheets %}
   </head>
@@ -55,8 +50,7 @@
     </div>
     <!-- [ Pre-loader ] End -->
 
-    {% block content %}{% endblock content %} 
-    {% include "includes/scripts.html" %}
+    {% block content %}{% endblock content %} {% include "includes/scripts.html" %}
 
     <!-- Специфічний JS буде тут -->
     {% block javascripts %}{% endblock javascripts %}
