--- a/adventure_net/equipment_accounting/templates/equipment_accounting/change_category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/change_category.html
@@ -13,7 +13,7 @@
         <span>{{form.errors.equipment_category_name}}</span>
     </div>
     
-    <div class="cange-category__buttons-block">
+    <div class="buttons">
         <button class="btn change__button_g" type="submit">Submit</button>
         <button class="btn change__button_r" type="reset" ><a class="link link-btn" href="{% url 'equipment:get_category' %}" role="button" > Cancel </a></button>
     </div>
