--- a/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
@@ -12,8 +12,10 @@
         <input class="pole__input" type="text" name="equipment_category_name">
         <span>{{form.errors.equipment_category_name}}</span>
     </div>
-    <button class="btn change__button_g" type="submit">Submit</button>
-    <button class="btn" type="reset"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > Cancel </a></button>
+    <div class="buttons">
+        <button class="btn" type="submit">Submit</button>
+        <button class="btn" type="reset"><a class="link link-btn" href="/equipment/category/" role="button" > Cancel </a></button>
+    </div>
 </div>
 </form>
 
