--- a/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/delete_equipment.html
@@ -10,8 +10,8 @@
     <div class="modal">
 <label class="pole__label">Do you want to delete this equipment?</label>
 <div class="buttons" >
-<button class="btn change__button_g" type="submit">Submit</button>
-<button type="reset" class="btn change__button_r"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
+<button class="btn" type="submit">Submit</button>
+<button type="reset" class="btn"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
 </div>
 </div>
 </form>
