--- a/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
@@ -14,7 +14,7 @@
     </div>
     <div class="buttons">
         <button class="btn" type="submit">Submit</button>
-        <button class="btn" type="reset"><a class="link link-btn" href="/equipment/category/" role="button" > Cancel </a></button>
+        <!-- <button class="btn" type="reset"><a class="link link-btn" href="/equipment/category/" role="button" > Cancel </a></button> -->
     </div>
 </div>
 </form>
