--- a/adventure_net/users/templates/users/singup.html
+++ b/adventure_net/users/templates/users/singup.html
@@ -1,9 +1,9 @@
 <form method="POST" action="{% url 'users:signup' %}">
     {% csrf_token %}
     <div style="padding: 10px">
-        <label> Username:
-            {{form.username}}
-        </label>
+        <label for="{{ form.username.id_for_label }}">Username:</label>
+        {{ form.username }}
+        
         <span>{{form.errors.username}}</span>
     </div>
     <div style="padding: 10px">
@@ -23,3 +23,4 @@
         <button type="reset" class="secondary">Reset</button>
     </div>
 </form>
+
