--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -50,6 +50,53 @@
     </div>
     <!-- [ Pre-loader ] End -->
 
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <div class="container">
+<!--                <a class="navbar-brand mr-5" href="news/today/">News</a>-->
+<!--                <a class="navbar-brand mr-5" href="contact_book/">Contact book</a>-->
+
+
+                        <a class="nav-item nav-link" href="/files/">Облік коштів</a>
+                        <a class="nav-item nav-link" href="{% url 'equipment:get_equipments' %}">Облік спорядження</a>
+                        <a class="nav-item nav-link" href="/files/">Члени клубу</a>
+
+
+                        <a class="nav-item nav-link" href="/files/">карта</a>
+                        <a class="nav-item nav-link" href="/files/">календар подій</a>
+                        <a class="nav-item nav-link" href="/files/">історія походів</a>
+                        <!-- <a class="nav-item nav-link" href="{% url 'users:signup' %}">Register</a> -->
+                  
+                  <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse flex-row-reverse" id="navbarToggle">
+                        <div class="navbar-nav mr-auto">
+                        </div>
+                        <!-- Navbar Right Side -->
+                        <div class="navbar-nav">
+                            {% if user.is_authenticated %}
+                                <a class="nav-item nav-link" href="/files/"><b>{{user.username}}</b></a>
+                                <!-- <a class="nav-item nav-link" href="{% url 'users:logout' %}">Logout</a> -->
+                            {% else %}
+                                <a class="nav-item nav-link" href="/files/">Login</a>
+                                <a class="nav-item nav-link" href="{% url 'users:signup' %}">Register</a>
+                            {% endif %}
+                        </div>
+                  </div>
+            </div>
+      </nav>
+    </header>
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8">
+            {% if messages %}
+                {% for message in messages%}
+                    <div class="alert {{ message.tags }}"  role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
     {% block content %}{% endblock content %} {% include "includes/scripts.html" %}
 
     <!-- Специфічний JS буде тут -->
