--- a/adventure_net/equipment_accounting/static/assets/css/style.css
+++ b/adventure_net/equipment_accounting/static/assets/css/style.css
@@ -84,3 +84,8 @@ h1 {
       display: flex;
       justify-content: space-evenly;
     }
+
+    .container {
+      display: flex;
+        justify-content: space-evenly;
+    }
