--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -57,14 +57,14 @@
 <!--                <a class="navbar-brand mr-5" href="contact_book/">Contact book</a>-->
 
                         {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="/files/">облік коштів</a>
-                        <a class="nav-item nav-link" href="{% url 'equipment:get_equipments' %}">Облік спорядження</a>
-                        <a class="nav-item nav-link" href="{% url 'users:club_members' %}">Члени клубу</a>
+                        <a class="link" href="/files/">Облік коштів</a>
+                        <a class="link" href="{% url 'equipment:get_equipments' %}">Облік спорядження</a>
+                        <a class="link" href="{% url 'users:club_members' %}">Члени клубу</a>
                         {% endif %}
 
-                        <a class="nav-item nav-link" href="/files/">карта</a>
-                        <a class="nav-item nav-link" href="/files/">календар подій</a>
-                        <a class="nav-item nav-link" href="/files/">історія походів</a>
+                        <a class="link" href="/files/">Карта</a>
+                        <a class="link" href="/files/">Календар подій</a>
+                        <a class="link" href="/files/">Історія походів</a>
 
                   
                   <span class="navbar-toggler-icon"></span>
@@ -74,15 +74,18 @@
                         </div>
                         <!-- Navbar Right Side -->
                         <div class="navbar-nav">
+
                             {% if user.is_authenticated %}
                                 
-                                <a class="nav-item nav-link" href="{% url 'users:profile' user_id=user.id %}"><b>{{ user.username }}</b></a>
-
-                                <a class="nav-item nav-link" href="{% url 'users:logout' %}">Logout</a>
-                            {% else %}
-                                <a class="nav-item nav-link" href="{% url 'users:login' %}">Login</a>
-                                <a class="nav-item nav-link" href="{% url 'users:signup' %}">Register</a>
-                            {% endif %}
+                                <a class="link" href="{% url 'users:profile' user_id=user.id %}"><b>{{ user.username }}</b></a>
+                                <a class="link" href="{% url 'users:logout' %}">Logout</a>
+                            
+                                {% else %}
+                            
+                                <a class="link" href="{% url 'users:login' %}">Login</a>
+                                <a class="link" href="{% url 'users:signup' %}">Register</a>
+                            
+                                {% endif %}
                         </div>
                   </div>
             </div>
