--- a/adventure_net/users/templates/users/login.html
+++ b/adventure_net/users/templates/users/login.html
@@ -1,27 +1,41 @@
+{% extends "layouts/base.html" %}
+{% block title %} Add category {% endblock %}
+
+<!-- Специфічний CSS буде тут -->
+{% block stylesheets %}{% endblock stylesheets %} 
+
+{% block content %}
+
 {% if messages %}
 <ul>
-    {% for message in messages %}
-    <li >{{message}}</li>
-    {% endfor %}
+  {% for message in messages %}
+  <li>{{message}}</li>
+  {% endfor %}
 </ul>
 {% endif %}
 
-
-
 <form method="POST" action="{% url 'users:login' %}">
-    {% csrf_token %}
-    <div style="padding: 10px">
-        <label for="{{ form.username.id_for_label }}">Username:</label>
-        {{ form.username }}
-    </div>
-    <div style="padding: 10px">
-        <label> Password:
-            {{form.password}}
-        </label>
-    </div>
-    <div class="grid">
-        <button type="submit">Submit</button>
-        <button type="reset" class="secondary">Reset</button>
-    </div>
+  {% csrf_token %}
+  <div class="modal">
+    <div>
+    <label lass="pole__label" for="{{ form.username.id_for_label }}"
+      >Username:</label
+    >
+    {{ form.username }}
+  </div>
+  <div style="padding: 10px">
+    <label lass="pole__label"> Password: {{form.password}} </label>
+  </div>
+  <div class="grid">
+    <button class="btn" type="submit">Submit</button>
+    <button class="btn" type="reset" class="secondary">Reset</button>
+  </div>
+</div>
 </form>
 
+
+
+{% endblock content %}
+
+<!-- Специфічний JS буде тут -->
+{% block javascripts %}{% endblock javascripts %}
