--- a/adventure_net/users/templates/users/change_profile.html
+++ b/adventure_net/users/templates/users/change_profile.html
@@ -6,63 +6,73 @@
 {% block content %}
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    <div class="modal">
     <a class="link" href="{% url 'users:add_user_position' %}" role="button"><button class="btn" type="button"> add_user_position</button></a>
     <a class="link" href="{% url 'users:get_user_position' %}" role="button"><button class="btn" type="button"> get_user_position</button></a>
-    <div class="modal">
+    
       <div class="pole">
-        <label class="pole__label">User Name: {{ form.user_name }}</label>
+        <label class="pole__label">User Name: </label>
+        {{ form.user_name }}
         <span>{{ form.errors.user_name }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Lastname: {{ form.user_lastname }}</label>
+        <label class="pole__label">User Lastname: </label>
+        {{ form.user_lastname }}
         <span>{{ form.errors.user_lastname }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Birthday: {{ form.user_birthday }}</label>
+        <label class="pole__label">User Birthday: </label>
+        {{ form.user_birthday }}
         <span>{{ form.errors.user_birthday }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Avatar: {{ form.user_avatar }}</label>
+        <label class="pole__label">User Avatar: </label>
+        {{ form.user_avatar }}
         <span>{{ form.errors.user_avatar }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Position: {{ form.user_position }}</label>
+        <label class="pole__label">User Position: </label>
+        {{ form.user_position }}
         <span>{{ form.errors.user_position }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Experience: {{ form.user_experience }}</label>
+        <label class="pole__label">User Experience: </label>
+        {{ form.user_experience }}
         <span>{{ form.errors.user_experience }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Location: {{ form.user_location }}</label>
+        <label class="pole__label">User Location: </label>
+        {{ form.user_location }}
         <span>{{ form.errors.user_location }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">User Info: {{ form.user_info }}</label>
+        <label class="pole__label">User Info: </label>
+        {{ form.user_info }}
         <span>{{ form.errors.user_info }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">Phone: {{ form.phone }}</label>
+        <label class="pole__label">Phone: </label>
+        {{ form.phone }}
         <span>{{ form.errors.phone }}</span>
       </div>
 
       <div class="pole">
-        <label class="pole__label">Email: {{ form.email }}</label>
+        <label class="pole__label">Email: </label>
+        {{ form.email }}
         <span>{{ form.errors.email }}</span>
       </div>
 
       <div class="buttons">
         <button class="btn" type="submit">Submit</button>
         <a class="link link-btn" href="{% url 'users:club_members' %}" role="button">Cancel</a>
-        
       </div>
     </div>
   </form>
