--- a/adventure_net/users/templates/users/change_user_position.html
+++ b/adventure_net/users/templates/users/change_user_position.html
@@ -11,12 +11,14 @@
   <div class="modal">
 
     <div class="pole">
-      <label class="pole__label">Change position category: {{form.positions_category}}</label>
+      <label class="pole__label">Change position category: </label>
+      {{form.positions_category}}
       <span>{{form.errors.positions_category}}</span>
     </div>
 
     <div class="pole">
-      <label class="pole__label"> Change position category info: {{form.positions_category_info}}</label>
+      <label class="pole__label"> Change position category info: </label>
+      {{form.positions_category_info}}
       <span>{{form.errors.positions_category_info}}</span>
     </div>
 
