--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -51,8 +51,8 @@
     <!-- [ Pre-loader ] End -->
 
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <div class="container">
+      <nav >
+            <div class="container navbar">
 <!--                <a class="navbar-brand mr-5" href="news/today/">News</a>-->
 <!--                <a class="navbar-brand mr-5" href="contact_book/">Contact book</a>-->
 
