--- a/adventure_net/users/templates/users/add_user_position.html
+++ b/adventure_net/users/templates/users/add_user_position.html
@@ -8,12 +8,14 @@
   <div class="modal">
 
     <div class="pole">
-      <label class="pole__label">Enter position category: {{form.positions_category}}</label>
+      <label class="pole__label">Enter position category: </label>
+      {{form.positions_category}}
       <span>{{form.errors.positions_category}}</span>
     </div>
 
     <div class="pole">
-      <label class="pole__label"> Wrote position category info: {{form.positions_category_info}}</label>
+      <label class="pole__label"> Wrote position category info: </label>
+      {{form.positions_category_info}}
       <span>{{form.errors.positions_category_info}}</span>
     </div>
 
