--- a/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
@@ -6,12 +6,24 @@
 
 <div class="modal">
     <h1>{{equipment.equipment_name}}</h1>
+    <img src="{{ equipment.photo_of_equipment.url }}" alt="Photo of equipment" width="200">
     <p>Weight of equipment kg: <b>{{equipment.weight_of_equipment_kg}}</b></p>
-    <p>Photo of equipment: <b>{{equipment.photo_of_equipment}}</b></p>
-    <p>Now booked: <b>{{equipment.now_booked}}</b></p>
-    <p>Equipment_category: <b>{{equipment.equipment_category}}</b></p>
-    </div>
+    <p>Equipment category:</p>
+    <ul>
+        {% for category in equipment.equipment_category.all %}
+            <li>{{ category.equipment_category_name }}</li>
+        {% endfor %}
+    </ul>
+    <p>Current user: <b>{{equipment.current_user}}</b></p>
+    <p>Equipment description: <b>{{equipment.equipment_description}}</b></p>
+</div>
 
+<a
+class="link"
+href="{% url 'equipment:change_equipment' equipment.id %}"
+role="button"
+><button class="btn button_g" type="button">Change</button></a
+>
     
 {% endblock content %}
 
