--- a/adventure_net/equipment_accounting/templates/equipment_accounting/change_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/change_equipment.html
@@ -1,71 +1,52 @@
-{% extends "layouts/base.html" %} {% block title %} change equipment {%endblock%}
+{% extends "layouts/base.html" %} {% block title %} change equipment {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-<form method="POST">
+<form method="POST" action="{% url 'equipment:change_equipment' equipment_id=equipment.id %}" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="modal">
     <div class="pole">
-      <label class="pole__label">Enter equipment name: </label>
-      <input
-        class="pole__input"
-        type="text"
-        name="equipment_name"
-        value="{{equipment.equipment_name}}"
-      />
-      <span>{{form.errors.equipment_name}}</span>
-    </div>
-    <div class="pole">
-      <label class="pole__label">Weight of equipment kg: </label>
-      <input
-        class="pole__input"
-        type="text"
-        name="weight_of_equipment_kg"
-        value="{{equipment.weight_of_equipment_kg}}"
-      />
-      <span>{{form.errors.weight_of_equipment_kg}}</span>
-    </div>
-    <div class="pole">
-      <label class="pole__label">Enter equipment photo path: </label>
-      <input
-        class="pole__input"
-        type="text"
-        name="photo_of_equipment"
-        value="{{equipment.photo_of_equipment}}"
-      />
-      <span>{{form.errors.photo_of_equipment}}</span>
+      <label class="pole__label">Equipment name:</label>
+      <input type="text" name="equipment_name" value="{{ equipment.equipment_name }}" required>
+      <span>{{ form.errors.equipment_name }}</span>
     </div>
 
-    <div class="pole form-group">
-      <label class="pole__label">Enter equipment photo path: </label>
-      <select class="pole__input" placeholder="now_booked" name="now_booked">
-        <option value="False">False</option>
-        <option value="True">True</option>
-      </select>
-      <span>{{form.errors.now_booked}}</span>
+    <div>
+      <label>
+        Choose equipment category:
+        <select class="pole__input" name="categories" required>
+          {% for category in categories %}
+          <option value="{{ category.equipment_category_name }}" {% if category.equipment_category_name == equipment.categories %} selected {% endif %}>
+            {{ category.equipment_category_name }}
+          </option>
+          {% endfor %}
+        </select>
+      </label>
+    </div>
+    <img src="{{ equipment.photo_of_equipment.url }}" alt="Photo of equipment" width="200">
+    <div class="pole">
+      <label class="pole__label">Photo of equipment:</label>
+      <input type="file" name="photo_of_equipment" accept="image/*">
+      <span>{{ form.errors.photo_of_equipment }}</span>
     </div>
 
-    <!-- <div>
-        <label> Choose equipmant category:
-            <select name="categories" required>
-                {% for category in categories %}
-                <option value="{{category.equipment_category_name}}">{{category.equipment_category_name}}</option>
-                {% endfor %}
-            </select>
-        </label>
-    </div> -->
-    
+    <div class="pole">
+      <label class="pole__label">Weight of equipment kg:</label>
+      <input type="number" name="weight_of_equipment_kg" value="{{ equipment.weight_of_equipment_kg }}" required>
+      <span>{{ form.errors.weight_of_equipment_kg }}</span>
+    </div>
+
+    <div class="pole">
+      <label class="pole__label">Equipment description:</label>
+      <textarea name="equipment_description" required>{{ equipment.equipment_description }}</textarea>
+      <span>{{ form.errors.equipment_description }}</span>
+    </div>
+
     <div class="buttons">
       <button class="btn" type="submit">Submit</button>
       <button class="btn" type="reset">
-        <a
-          class="link link-btn"
-          href="{% url 'equipment:get_equipments' %}"
-          role="button"
-        >
-          Cancel
-        </a>
+        <a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button">Cancel</a>
       </button>
     </div>
   </div>
