--- a/adventure_net/users/templates/users/main.html
+++ b/adventure_net/users/templates/users/main.html
@@ -3,9 +3,9 @@
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
-
+<div class="modal">
   <h1>{{ msg }}</h1>
-
+</div>
 
   {% endblock content %}
 
