--- a/adventure_net/equipment_accounting/templates/equipment_accounting/checker.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/checker.html
@@ -3,13 +3,13 @@
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
-
+<div class="modal">
   <h1>{{ msg }}</h1>
-  <ul>
-    <li><a class="link" href="../category">Category</a></li>
-    <li><a class="link" href="../">equipment</a></li>
+  <ul class="list">
+    <li class="items"><a class="link" href="../category">Category</a></li>
+    <li class="items"><a class="link" href="../">equipment</a></li>
   </ul>
-
+</div>
   {% endblock content %}
 
   <!-- Специфічний JS буде тут  -->
