added the ability to book and cancel equipment reservations

--- a/adventure_net/equipment_accounting/templates/equipment_accounting/equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/equipment.html
@@ -46,7 +46,7 @@
       >
       <a
         class="link"
-        href="{% url 'equipment:cancel_equipment_reservation' equipment.id %}"
+        href="{% url 'equipment:get_book_equipment' equipment.id %}"
         role="button"
         class="contrast"
         ><button class="btn button_r" type="button">Сancel_reservation</button></a
