--- a/adventure_net/equipment_accounting/templates/equipment_accounting/book_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/book_equipment.html
@@ -4,7 +4,37 @@
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-  <h1>{{ msg }}</h1>
+<form method="POST" action="{% url 'equipment:book_equipment' equipment_id=equipment.id %}" enctype="multipart/form-data">
+
+  {% csrf_token %}
+  <div class="modal">
+  
+
+    <div class="pole">
+      <label class="pole__label">Reserve equipment from: {{ form.booking_date_from }}</label>
+      <span>{{ form.errors.booking_date_from }}</span>
+    </div>
+
+    <div class="pole">
+      <label class="pole__label">Reserve equipment for: {{ form.booking_date_to }}</label>
+      <span>{{ form.errors.booking_date_to }}</span>
+    </div>
+
+
+    <div class="buttons">
+      <button class="btn" type="submit">Submit</button>
+      <button class="btn" type="reset">
+        <a
+          class="link link-btn"
+          href="{% url 'equipment:get_equipments' %}"
+          role="button"
+        >
+          Cancel
+        </a>
+      </button>
+    </div>
+  </div>
+</form>
 
 
   {% endblock content %}
