--- a/adventure_net/equipment_accounting/templates/equipment_accounting/cancel_equipment_reservation.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/cancel_equipment_reservation.html
@@ -1,10 +1,19 @@
 {% extends "layouts/base.html" %}
-{% block title %} checker {% endblock %}
+{% block title %} Cancel Equipment Reservation {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-  <h1>{{ msg }}</h1>
+<form method="post">
+  {% csrf_token %}
+  <div class="modal">
+<label class="pole__label">Do you want to cancel this equipment?</label>
+<div class="buttons" >
+<button class="btn" type="submit">Submit</button>
+<button type="reset" class="btn"><a class="link link-btn" href="{% url 'equipment:get_equipments' %}" role="button" > No </a></button>
+</div>
+</div>
+</form>
 
 
   {% endblock content %}
